10. Kubernetes/K8s_Notes/5. Security-LimitPrivilages/2.1 Open Policy Agent (OPA) & Gatekeeper/Integrating OPA/K8sRequiredLabels.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srequiredlabels

      violation[{"msg": msg}] {
        provided := {label | input.review.object.metadata.labels[label]}
        required := {"app", "env"}
        missing := required - provided
        count(missing) > 0
        msg := sprintf("Missing required labels: %v", [missing])
      }

---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: must-have-app-and-env-labels
spec:
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
